# learning

./: .gitignore
alchemy/eth-bootcamp/MintNFT/: package-lock.json  package.json
alchemy/eth-bootcamp/demo-hardhat/: hardhat.config.ts  package-lock.json  package.json
daml/create-daml-app/: daml.yaml
daml/create-daml-app/daml/: User.daml
devcon-demo/ui/: package-lock.json
devcon-demo/zk/: package-lock.json  package.json
eth-course/lottery/: deploy.js  package-lock.json  package.json
ethers/: package-lock.json  package.json
ethers/src/: index.js
kdf/: index.js  package-lock.json  package.json  tsconfig.json
kdf/src/: canonicalize.js  contract.js  index.ts  kdf.js
local-near/: index.js  package-lock.json  package.json
passkeys-testing/: package-lock.json  package.json
passkeys-testing/tests/: example.spec.ts
pdf-to-text/: .gitignore  index.js  package-lock.json  package.json
pdf-to-text/src/: index.ts
playwright/pw-apipractice-app/: package-lock.json  package.json  playwright.config.ts  test-options.ts
playwright/pw-practice-app/: angular.json  playwright.config.ts
rust-book/async-class/: Cargo.toml
rust-book/data_structure_exercises/: Cargo.toml
rust-book/hello-world/: main
rust-book/macros/: Cargo.toml
rust-book/project-server-await/: Cargo.toml
rust-book/workspaces/: Cargo.toml
rust-projects/redis/: Cargo.toml  dump.rdb
rust-projects/tokio-project/: Cargo.toml
rust-projects/tracing-sandbox/: Cargo.toml
rust-projects/url-shortener/: Cargo.toml  dump.rdb
rust-projects/url-shortener/src/: main.rs  modules.rs
rust-projects/url-shortener/src/modules/: routes.rs  setup.rs  store.rs
rust-smart-contracts/auction-contract/: Cargo.toml  README.md
rust-smart-contracts/coin-flip/: Cargo.toml  README.md
rust-smart-contracts/complext-cross-contract-call/: Cargo.toml  README.md
rust-smart-contracts/counter-contract/: Cargo.toml  README.md
rust-smart-contracts/cross-contract-call-contract/: Cargo.toml  README.md
rust-smart-contracts/crossword-contract/: Cargo.toml  README.md
rust-smart-contracts/donation-contract/: Cargo.toml  README.md
rust-smart-contracts/donation-contract-1/: Cargo.toml  README.md
rust-smart-contracts/factory-contract/: Cargo.toml  README.md
rust-smart-contracts/guest-book-contract/: Cargo.toml  README.md
rust-smart-contracts/hello-world-near/: Cargo.toml  README.md
rust-smart-contracts/mock-signer-chain-signatures/: Cargo.toml  README.md
rust-smart-contracts/mock-signer-chain-signatures/src/: lib.rs
rust-smart-contracts/mock-signer-chain-signatures/src/lib/: signer.rs  types.rs
rust-smart-contracts/mock-signer-chain-signatures/tests/: test.rs
rust-smart-contracts/update-migrate-contract/: Cargo.toml  README.md
rustlings/exercises/: quiz1.rs  quiz2.rs
set-contract/: hardhat.config.ts  package-lock.json  package.json
set-contract/contract-fe/: package-lock.json  package.json
set-contract/contracts/: CallerRegistry.sol  FT.sol  FTInterface.sol  NFT.sol  NFTERC1155.sol
set-contract/src/: index.ts
solana/oversized-transaction/: Anchor.toml  README.md  package.json
solana/oversized-transaction/programs/oversized-transaction/: Cargo.toml
solana/oversized-transaction/programs/oversized-transaction/src/: lib.rs
solana/oversized-transaction/programs/oversized-transaction/src/contract/: ethereum_auth.rs  mod.rs  oidc_auth.rs  webauthn_auth.rs
(+265 files in other folders)
