[package]
name = "oversized-transaction"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oversized_transaction"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
hex = "0.4.3"
sha3 = "0.10.8"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
# rsa = { version = "0.9.8", features = ["sha2"] }
schemars = "0.8.22"
# sha2 = "0.10.8"
# serde_json = "1.0.140"
# Pinned for compatibility with rustc 1.79.0-dev
# base64ct = "=1.6.0" 
