[package]
name = "oversized-transaction"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oversized_transaction"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
hex = "0.4.3"
sha3 = "0.10.8"
schemars = "0.8.22"
sha2 = "0.10.8"
p256 = "0.13.2"
borsh = "1.5.7"
# Tagged for compatibility with Solana Program
base64ct = "=1.6.0" 